--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -1,6 +1,6 @@
 
 /* Mobile Devices: 320px - 768px */
-@media (min-width: 320px) and (max-width: 768px) {
+@media (min-width: 1px) and (max-width: 768px) {
   :root {
     --nav-width: 100%;
     --main-width: 100%;
@@ -25,9 +25,9 @@
   }
 
   .logo {
-    width: 5.5rem;
+    width: 6rem;
     left: 0;
-    top: 0.4rem;
+    top: 0;
   }
 
   .nav-links {
@@ -90,28 +90,31 @@
   }
 
   .logo {
-    width: 6rem; /* Adjusted from var(--text-9xl) which was too large */
+    width: 9rem; /* Adjusted from var(--text-9xl) which was too large */
   }
 }
 
 /* Laptops: 769px - 1024px */
 @media (min-width: 769px) and (max-width: 1024px) {
   .logo {
-    width: 9rem;
+    width: 10rem;
     left: 0;
     top: 0;
   }
 }
 
 /* Extra-large Devices: 1201px and above */
-@media (min-width: 1201px) {
+@media (min-width: 1025px) {
   :root {
     --nav-width: 12rem;
     --main-width: calc(100vw - var(--nav-width));
   }
 
   .logo {
-    width: 11rem;
+    width: 12rem;
+    position:absolute;
+    top:0;
+    left:0;
   }
 
   .nav-link {
