--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -1,4 +1,15 @@
-
+:root {
+  --background-color: #f9f1e6;
+  --font-color: rgb(0,0,0);
+  --accent-b: #603f26; /* Second accent colour */
+  --nav-width: 10rem;
+  --main-width: calc(100vw - var(--nav-width));
+  --space-xxs: 0.25rem;  /* 4px */
+  --space-xs: 0.5rem;    /* 8px */
+  --space-sm: 1rem;      /* 16px */
+  --space-md: 2rem;      /* 32px */
+  --space-lg: 4rem;      /* 64px */
+}
 /* Mobile Devices: 320px - 768px */
 @media (min-width: 1px) and (max-width: 768px) {
   :root {
@@ -25,7 +36,7 @@
   }
 
   .logo {
-    width: 5.5rem;
+    width: 4rem;
     left: 7px;
     top: 4px;
   }
@@ -38,7 +49,7 @@
   }
 
   .nav-link {
-    font-size: 0.7rem;
+    font-size: 0.6rem;
   }
 
   .main-content {
@@ -82,7 +93,7 @@
 /* Tablets: 481px - 768px (within mobile range but specific overrides) */
 @media (min-width: 481px) and (max-width: 768px) {
   .nav-link {
-    font-size: var(--text-sm);
+    font-size: 0.8rem;
   }
 
   .desktop-nav {
@@ -90,7 +101,7 @@
   }
 
   .logo {
-    width: 8.5rem; /* Adjusted from var(--text-9xl) which was too large */
+    width: 7rem; /* Adjusted from var(--text-9xl) which was too large */
     top: 4px;
     left: 7px;
   }
@@ -99,7 +110,7 @@
 /* Laptops: 769px - 1024px */
 @media (min-width: 769px) and (max-width: 1024px) {
   .logo {
-    width: 10rem;
+    width: 8.5rem;
     left: 0;
     top: 0;
   }
@@ -113,8 +124,8 @@
   }
 
   .logo {
-    width: 10rem;
-    position:absolute;
+    width: 9rem;
+    position: absolute;
     top: 4px;
     left: 7px;
   }
