--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -37,8 +37,8 @@
 
   .logo {
     width: 2rem;
-    left: 1.5%;
-    top: 2%;
+    left: 1rem;
+    top: 5px;
   }
 
   .nav-links {
@@ -102,8 +102,8 @@
 
   .logo {
     width: 3rem; /* Adjusted from var(--text-9xl) which was too large */
-    left: 1.5%;
-    top: 2%;
+    left: calc(var(--nav-width) / 4);
+    top: 5px;
   }
 }
 
@@ -111,8 +111,8 @@
 @media (min-width: 769px) and (max-width: 1024px) {
   .logo {
     width: 4rem;
-    left: 1.5%;
-    top: 2%;
+    left: calc(var(--nav-width) / 4);
+    top: 2rem;
   }
 }
 
@@ -125,9 +125,8 @@
 
   .logo {
     width: 4rem;
-    position: absolute;
-    left: 1.5%;
-    top: 2%;
+    calc(var(--nav-width) / 4);
+    top: 2rem;
   }
 
   .nav-link {
